refactor organizacion