@@ -59,19 +59,19 @@ public class Organizacion implements ZonaObserver {
     public List<ZonaDeCobertura> getZonas() { return zonas; }
     
     
-    //Obtener todas las muestras existentes
-    public List<Muestra> obtenerMuestras() {
-    	return this.zonas.stream()
+    //Obtener todas las muestras existentes de cada zona
+    public List<Muestra> getMuestras() {
+    	return this.getZonas().stream()
     			   .flatMap(zona -> zona.getMuestras().stream())
     			   .distinct()
-    			   .collect(Collectors.toList());
+    			   .toList();
     }
     
     //Dado una muestra, conocer todas las muestras obtenidas a menos de x kilómetros.
     public List<Muestra> muestrasCercanas(Muestra muestraObjetivo, double distanciaEnKm) {
-    	return this.obtenerMuestras().stream()
+    	return this.getMuestras().stream()
     			.filter(muestra -> !muestra.equals(muestraObjetivo))
     			.filter(muestra -> muestra.getUbicacion().distanciaA(muestraObjetivo.getUbicacion()) <= distanciaEnKm)
-				.collect(Collectors.toList());
+				.toList();
     }
 }
